finished app pt 1

--- a/PlantLady/PlantLady/Views/HomePage.xaml
+++ b/PlantLady/PlantLady/Views/HomePage.xaml
@@ -6,9 +6,8 @@
     <StackLayout>
         <Frame HasShadow="True"
                HeightRequest="120"
-               WidthRequest="120"
-               BackgroundColor="{StaticResource DarkGreen}">
-            <!--<Frame.Background>
+               WidthRequest="120">
+            <Frame.Background>
                 <LinearGradientBrush StartPoint="0,0"
                              EndPoint="0,1">
                     <GradientStop Color="{StaticResource DarkestGreen}"
@@ -16,7 +15,7 @@
                     <GradientStop Color="{StaticResource DarkGreen}"
                           Offset="1.0"/>
                 </LinearGradientBrush>
-            </Frame.Background>-->
+            </Frame.Background>
             <Label Text="Plant Care" 
                    Style="{StaticResource HeaderLabel}" 
                    HorizontalOptions="CenterAndExpand" 
