--- a/PlantLady/PlantLady/Views/HomePage.xaml
+++ b/PlantLady/PlantLady/Views/HomePage.xaml
@@ -6,8 +6,9 @@
     <StackLayout>
         <Frame HasShadow="True"
                HeightRequest="120"
-               WidthRequest="120">
-            <Frame.Background>
+               WidthRequest="120"
+               BackgroundColor="{StaticResource DarkGreen}">
+            <!--<Frame.Background>
                 <LinearGradientBrush StartPoint="0,0"
                              EndPoint="0,1">
                     <GradientStop Color="{StaticResource DarkestGreen}"
@@ -15,7 +16,7 @@
                     <GradientStop Color="{StaticResource DarkGreen}"
                           Offset="1.0"/>
                 </LinearGradientBrush>
-            </Frame.Background>
+            </Frame.Background>-->
             <Label Text="Plant Care" 
                    Style="{StaticResource HeaderLabel}" 
                    HorizontalOptions="CenterAndExpand" 
@@ -27,7 +28,6 @@
                     <x:String>aloe vera</x:String>
                     <x:String>dracaena</x:String>
                     <x:String>jade</x:String>
-                    <x:String>dieffenbachia</x:String>
                     <x:String>dieffenbachia</x:String>
                 </x:Array>
             </CarouselView.ItemsSource>
@@ -42,7 +42,7 @@
                                HorizontalOptions="Center"
                                VerticalOptions="CenterAndExpand">
                             <Grid ColumnDefinitions="*,*" RowDefinitions="*,200,20,10">
-                                <Label Text="{Binding .}" 
+                                <Label Text="{Binding Name}" 
                                        Style="{StaticResource PlantLabel}"
                                        Grid.Row="0" Grid.ColumnSpan="2"/>
                                 <Image Source="https://secure.img1-fg.wfcdn.com/im/94669473/resize-h800%5Ecompr-r85/1248/124805864/Live+Aloe+Plant+in+Pot.jpg"
@@ -50,10 +50,10 @@
                                        HeightRequest="150"
                                        WidthRequest="150"
                                        Grid.Row="1" Grid.ColumnSpan="2" />
-                                <!--<Label Text="Sun"
+                                <Label Text="Sun"
                                        HorizontalOptions="Center"
-                                       Grid.Row="2" Grid.Column="0" />-->
-                                <AbsoluteLayout Scale=".04" Grid.Row="2" Grid.Column="0" Padding="0" Margin="0,0,15,10">
+                                       Grid.Row="2" Grid.Column="0" />
+                                <!--<AbsoluteLayout Scale=".04" Grid.Row="2" Grid.Column="0" Padding="0" Margin="0,0,15,10">
                                     <Path Data="M377.139 259.492c0 66.637-54.020 120.658-120.658 120.658-66.637 0-120.658-54.021-120.658-120.658 0-66.637 54.020-120.658 120.658-120.658 66.637 0 120.658 54.020 120.658 120.658z" Fill="#000000" />
                                     <Path Data="M228.352 100.669l30.27-77.906 25.979 77.906z" Fill="#000000" />
                                     <Path Data="M228.352 411.341l30.27 77.895 25.979-77.895z" Fill="#000000" />
@@ -63,22 +63,22 @@
                                     <Path Data="M346.276 385.423l76.524 33.639-36.741-73.442z" Fill="#000000" />
                                     <Path Data="M168.499 388.199l-76.493 33.639 36.72-73.442z" Fill="#000000" />
                                     <Path Data="M388.199 168.499l33.618-76.513-73.4 36.751z" Fill="#000000" />
-                                </AbsoluteLayout>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.Row="3" Grid.Column="0" >
+                                </AbsoluteLayout>-->
+                                <!--<StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.Row="3" Grid.Column="0" >
                                     <Ellipse Fill="#081C15" />
                                     <Ellipse Fill="#081C15"/>
                                     <Ellipse Fill="#081C15"/>
-                                </StackLayout>
+                                </StackLayout>-->
                                 <Label Text="Water"
                                        HorizontalOptions="Center"
                                        Grid.Row="2" Grid.Column="1"
                                        MaxLines="5"
                                        LineBreakMode="TailTruncation" />
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.Row="3" Grid.Column="1" >
+                                <!--<StackLayout Orientation="Horizontal" HorizontalOptions="Center" Grid.Row="3" Grid.Column="1" >
                                     <Ellipse Fill="#081C15" />
                                     <Ellipse />
                                     <Ellipse />
-                                </StackLayout>
+                                </StackLayout>-->
                             </Grid>
                         </Frame>
                     </StackLayout>
