--- a/PlantLady/PlantLady/Views/HomePage.xaml
+++ b/PlantLady/PlantLady/Views/HomePage.xaml
@@ -87,9 +87,9 @@
         <IndicatorView x:Name="indicatorView"
                                IndicatorColor="{StaticResource DarkGreen}"
                                SelectedIndicatorColor="{StaticResource DarkestGreen}"
-                               HorizontalOptions="Center"
+                               IndicatorSize="18"
                                VerticalOptions="StartAndExpand"
-                                Padding="0,20,0,0"/>
+                               Padding="0,20,0,0"/>
     </StackLayout>
 
 </ContentPage>
