--- a/PlantLady/PlantLady/Views/PlantsPage.xaml
+++ b/PlantLady/PlantLady/Views/PlantsPage.xaml
@@ -59,6 +59,7 @@
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
+            <Button Text="Toaster" IsEnabled="False" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
