focus on windows

--- a/PlantLady/PlantLady.UWP/App.xaml
+++ b/PlantLady/PlantLady.UWP/App.xaml
@@ -4,4 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PlantLady.UWP">
 
+    <Application.Resources>
+        <ResourceDictionary>
+
+        </ResourceDictionary>
+    </Application.Resources>
+
 </Application>
